# Venue

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.simulation  README.md  pyproject.toml  pytest.ini  requirements.txt  simulation_runner.py
backend/app/: config.py  firebase_client.py  main.py
backend/app/agents/: agent_analyst.py  agent_communicator.py  (+3 more)
backend/tests/: _fake_firestore.py  conftest.py  test_agents.py  test_agents_runtime.py  test_api.py  test_api_routes.py  test_bigquery_service.py  test_cloud_storage_service.py  test_e2e.py  test_fallback.py  test_google_services.py  test_health.py  test_performance.py  test_pipeline.py  test_pipeline_core.py  test_pubsub_service.py  test_routes_pipeline_extended.py  test_routes_simulation.py  test_routes_system_extended.py  test_routes_zones.py  test_routes_zones_extended.py  test_security.py  test_simulator.py  test_submission_signals.py  test_system_impact.py  test_websocket_manager.py
docs/: AI_SYSTEM_OVERVIEW.md  API_EXAMPLES.md  GOOGLE_SERVICES.md  SUBMISSION_CHECKLIST.md
e2e/: judge-journey.spec.ts
functions/: README.md  index.js  pipeline_consumer.js
src/: App.a11y.test.tsx  App.tsx  index.css
src/data/: simulation.ts  venues.ts
src/store/: backendUtils.ts  storeTypes.ts  useStore.ts
src/types/: index.ts
(+52 files in other folders)
